--- a/ForumBuilder/WebContent/css/style_wizard.css
+++ b/ForumBuilder/WebContent/css/style_wizard.css
@@ -82,7 +82,7 @@ body{
 	width:60px;
 	height:60px;
 	top:3%;
-	right:3%;
+	right:2%;
 	background-color:#EB4040;
 	color:#fff;
 	border-radius:50px;
@@ -93,6 +93,23 @@ body{
 	font-weight: 400px;
 }
 
+.homefloat{
+	
+	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	position:fixed;
+	width:60px;
+	height:60px;
+	top:13%;
+	right:2%;
+	background-color:#EB4040;
+	color:#fff;
+	border-radius:50px;
+	text-align:center;
+	font-size:13px;
+	text-decoration:none;
+	line-height: 60px; 
+	font-weight: 400px;
+}
 
 #container #Types{
 	display:inline-block;
@@ -207,7 +224,7 @@ hr{
 	display:inline-block;
 	width: 40%;
 	margin-top:7%;
-	margin-left:55%;
+	margin-left:52%;
 	background-color: rgba(255, 255, 255, 0.5);
 }
 
